Folder aanmaken voor de klassen van de TaalApp. Een paar recources veranderd in strings.xml om zo een gevoel te krijgen voor de werkwijze van commit, push, etc.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">AppLabDemo</string>
+    <string name="app_name">TaalApp</string>
 
     <string name="auto_update_url" translatable="false">http://open.ou.nl</string>
 
-    <string name="tutorial_welcome_description">The sky is the limit.</string>
+    <string name="tutorial_welcome_description">Maakt talen leren eenvoudig.</string>
     <string name="tutorial_welcome_title"></string>
     <string name="title_activity_settings">Settings</string>
 
