Testen veranderen van de tekst.

--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="tutorial_welcome_description">Met deze app is alles mogelijk.</string>
+    <string name="tutorial_welcome_description">De TaalApp bij uitstek...</string>
     <string name="tutorial_welcome_title"></string>
 </resources>
